Merged revisions 16600-16608,16610-16612,16615,16623,16625-16627,16630-16632,16639-16654 via svnmerge from https://svn.codehaus.org/mule/branches/mule-3.x
................
  r16600 | dirk.olmes | 2010-02-02 12:29:36 +0100 (Tue, 02 Feb 2010) | 9 lines
  
  Merged revisions 16598 via svnmerge from 
  https://svn.codehaus.org/mule/branches/mule-2.2.x
  
  ........
    r16598 | dirk.olmes | 2010-02-02 12:13:48 +0100 (Tue, 02 Feb 2010) | 2 lines
    
    avoid code duplication, factor out the web service check into its own helper class.
  ........
................
  r16601 | rossmason | 2010-02-02 14:48:43 +0100 (Tue, 02 Feb 2010) | 1 line
  
  use the same CaseInsensitiveMap for the session too
................
  r16602 | rossmason | 2010-02-02 14:51:54 +0100 (Tue, 02 Feb 2010) | 1 line
  
  clean up, no code changes
................
  r16603 | rossmason | 2010-02-02 15:02:12 +0100 (Tue, 02 Feb 2010) | 1 line
  
  added assertions back in
................
  r16604 | rossmason | 2010-02-02 15:06:08 +0100 (Tue, 02 Feb 2010) | 1 line
  
  removed unecessary comparison
................
  r16605 | rossmason | 2010-02-02 15:18:34 +0100 (Tue, 02 Feb 2010) | 1 line
  
  Test ordering and session property access and case
................
  r16606 | rossmason | 2010-02-02 16:40:29 +0100 (Tue, 02 Feb 2010) | 1 line
  
  Annotations processing cleanup. Use the AnnotationsParserFactory for all annotation processing.
................
  r16607 | rossmason | 2010-02-02 16:41:10 +0100 (Tue, 02 Feb 2010) | 1 line
  
  MULE-4721. Wrap the annotations support into a config builder, make available by default from the Testcases
................
  r16608 | rossmason | 2010-02-02 16:41:53 +0100 (Tue, 02 Feb 2010) | 1 line
  
  MULE-4722. Make annotations processing available by default from the Mule server (stand alone)
................
  r16610 | rossmason | 2010-02-03 12:39:19 +0100 (Wed, 03 Feb 2010) | 1 line
  
  Added serialization test
................
  r16611 | rossmason | 2010-02-03 1