@@ -11,32 +11,54 @@ package org.mule.util;
 
 import org.mule.tck.AbstractMuleTestCase;
 
-import java.util.Map;
+import org.apache.commons.lang.SerializationUtils;
+import org.junit.Test;
 
-/**
- * TODO
- */
 public class CaseInsensitiveHashMapTestCase extends AbstractMuleTestCase
 {
+    protected CaseInsensitiveHashMap createTestMap()
+    {
+        CaseInsensitiveHashMap map = new CaseInsensitiveHashMap();
+        map.put("FOO", "BAR");
+        map.put("DOO", Integer.valueOf(3));
+        return map;
+    }
+
+    @Test
     public void testMap() throws Exception
     {
-        Map map = new CaseInsensitiveHashMap();
-        map.put("FOO", "BAR");
-        map.put("DOO", new Integer(3));
+        CaseInsensitiveHashMap map = createTestMap();
+        doTestMap(map);
+    }
 
+    @Test
+    public void testMapSerialization() throws Exception
+    {
+        CaseInsensitiveHashMap map = createTestMap();
+        doTestMap(map);
+
+        byte[] bytes = SerializationUtils.serialize(map);
+        CaseInsensitiveHashMap resultMap = (CaseInsensitiveHashMap)SerializationUtils.deserialize(bytes);
+        doTestMap(resultMap);
+    }
+
+    public void doTestMap(CaseInsensitiveHashMap  map) throws Exception
+    {
         assertEquals("BAR", map.get("FOO"));
         assertEquals("BAR", map.get("foo"));
         assertEquals("BAR", map.get("Foo"));
 
-        assertEquals(new Integer(3), map.get("DOO"));
-        assertEquals(new Integer(3), map.get("doo"));
-        assertEquals(new Integer(3), map.get("Doo"));
+        assertEquals(Integer.valueOf(3), map.get("DOO"));
+        assertEquals(Integer.valueOf(3), map.get("doo"));
+        assertEquals(Integer.valueOf(3), map.get("Doo"));
 
         assertEquals(2, map.size());
+
+        // Test that the key set contains the same case as we put in
         for (Object o : map.keySet())
         {
             assertTrue(o.equals("FOO") || o.equals("DOO"));
+            assertFalse(o.equals("foo") || o.equals("doo"));
         }
-
     }
 }
